testsuite/tests/typecheck/should_compile/T26154/Other.hs
{-# LANGUAGE TypeFamilies #-}

module Other where

type family OtherF a b

type instance OtherF a b = b
