testsuite/tests/typecheck/should_fail/AssocTyDef07.hs
{-# LANGUAGE TypeFamilies #-}
module AssocTyDef07 where

class Cls a where
    type Typ a = Int
     -- Default without family
